[tool.poetry]
name = "testasyncio"
version = "0.1.0"
description = ""
authors = ["Fan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
asyncio = "^3.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
